# Neuron

./: README.md
Brunel/: CMakeLists.txt  Constant.cpp  Constant.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  main.cpp  unittest.cpp
Brunel.xcodeproj/: project.pbxproj
Brunel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Brunel.xcodeproj/xcuserdata/ninawahler.xcuserdatad/xcschemes/: Brunel.xcscheme  xcschememanagement.plist
Brunel/html/: _constant_8hpp_source.html  _network_8hpp_source.html  _neuron_8hpp_source.html  annotated.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  files.html  functions.html  functions_func.html
Brunel/html/search/: all_0.js  all_1.js  all_4.js  all_6.js  all_7.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  searchdata.js
Brunel/latex/: annotated.tex  class_network.tex  class_neuron.tex  refman.tex
